save changes for returning error on adv=0 if not already advertising

--- a/prj_base.conf
+++ b/prj_base.conf
@@ -45,4 +45,4 @@ CONFIG_ENTROPY_GENERATOR=y
 CONFIG_DEVICE_POWER_MANAGEMENT=y
 
 # Build for use with Open Bootloader which is preflashed on NINA-B40X modules
-# CONFIG_FLASH_BASE_ADDRESS=0x1000
+CONFIG_FLASH_BASE_ADDRESS=0x1000
